add first blog entry

--- a/_posts/2025-10-25-setup.md
+++ b/_posts/2025-10-25-setup.md
@@ -1,9 +1,20 @@
 ---
-title: "About the project"
-date: 2025-10-25
+title: "A good place to start from"
+date: 2025-12-07
 ---
 
-Hi all!
-d23
+Git is a version control software that allows developer to externally store and secure code that was worked on. We like versioning, and we like
+sleeping well at night knowing that whatever may come, our work so far is safe. But sometimes, we do like to self-sabotage.
 
-23d2
+In early summer of 2025, we started throwing some ideas at the wall and wanted to see what sticks. As soon as we had a faint concept of what our game
+should look and play like, we immediately started working on it. We decided to use open-source software as a testament of our love for them and 
+settled on using Godot as the game engine. We learned basic concepts with the help of Youtube videos, started examining different structures that are
+cusomary in game development, trained in doing pixel-art and 3D-modeling and had a very barebone movement system soon after.
+
+From there we continuously tried to make the code more robust to mitigate any quirks that would come up during debugging, and as of October/November 2025 we had this at least finished. Now, why would I start this post by putting git on a pedestal? Is it because we did not use it? No, that is not the entire truth.
+We had made some early commits during development. The emphasis of the last sentence should be on '**some**' and '**early commits**'.
+
+Earlier this week I was tinkering with my machine and at some point my OS was not booting anymore. I was even not able to boot to my secondary OS. I tried accessing my disk from a live-boot of Fedora, but without success. 
+Everything pointed towards the fact that my SSD was faulty or even broken.
+
+Now, is this exclusively bad? Has everything so been for nothing if we cannot retrieve it? On one hand one could argue that valuable work is lost forever, on the other hand we still know what we learned and that most of the time was spent getting to know our toolchain, so we should be back on our feet soon. And as soon as we are, we make sure that we keep committing our code more frequently.
