tweaked dialogue system, add placeholder theme

--- a/_posts/2025-12-20-002.md
+++ b/_posts/2025-12-20-002.md
@@ -1,5 +1,5 @@
 ---
-title: "[Ramble] Why we want to game that we want to do."
+title: "[Ramble] Why we want to create the game that we are creating"
 date: 2025-12-18
 ---
 
