--- a/_posts/2025-12-30-003.md
+++ b/_posts/2025-12-30-003.md
@@ -3,6 +3,50 @@ title: "[Progress Update] Navigating our world"
 date: 2025-12-30
 ---
 
-Today, we finally provide some screenshots of what I've been working on over the past few weeks.
+Today we can finally show the progress we made over the past few weeks. We want the environment of our game to be 3-dimensional, but keep
+characters and some other things as 2-dimensional sprites.
+
+![](/assets/images/blog/2025-12-30/env-show.png)
+
+This means, that we need to always take into account, where our player is facing whenever we rotate the camera. For this, we just store
+the facing direction of the player and the facing direction of the camera on the x-z-plane and apply calculations for our blending vectors when needed. To simplify, this means that the directions the sprites are facing are always consistent with the camera facing direction.
+
+![](/assets/images/blog/2025-12-30/rot.gif)
+
+This also affects the sprites of all NPCs and interactables scattered around the world of course. The camera has locked rotations, which means that the player is allowed to rotate it to eight predefined angles. When building the environments, this also needs to be taken into account. There will be some environments (perhaps interiors or special environments) in which the camera either cannot be rotated or will rotate automatically for a cinematic effect.
 
 ## Movement System
+
+![](/assets/images/blog/2025-12-30/move.gif)
+
+The movement system has progressed greatly. There is now a system in place that detects, whether a player can jump down a ledge or ever vault over a gap. The system for jumping is made up of three raycasts pointing downwards, all of which are distributed evenly in front of the player. These raycasts are only activated, whenever the player collides with an invisible wall that hinders the player to just fall down.
+
+![](/assets/images/blog/2025-12-30/coll.png)
+
+To efficiently create these invisible walls, I created a Godot plugin that takes the colliders of an area and checks, where the ledges are. _This plugin is very rudamentary, but will be made public as soon as it reaches a productive stage for all to use._ When hitting such a wall, the raycasts are activated and then we select the landing point by choosing the upper-most collision point. If all collision points have eqwual height, we always take the 'closest' jump, which just means 'jumping down'.
+
+I also have implemented a system that allows the player to climb up to higher platforms, which relies only on one raycast. When colliding with an actual wall, the system checks if the collision point of the raycast provides enough room for the player to stand on, and if it is the case, the players foot-position is moved there.
+
+The only thing missing is a scaling system, for example when encountering ladders or climbable walls. When this is implemented, the movement system will only need to be checked on its robustness but will be considered finished in its capabilities (naturally, we also need to make some animation-clean-up further down the line).
+
+## Dialogue System
+
+For the dialogue system, I decided to use ![Nathan Hoad's Dialogue Manager](https://dialogue.nathanhoad.net/), which already comes shipped with a great set of functionalities. For our game, I only needed to make some minor tweaks and add only little functionality, such as a 'speaking sound' whenever letters are being printed in the dialogue boxes.
+
+Depending on the type of dialogue, I created three separate instances with which an NPC can display its text. Something that might be needed for small cutscenes are the default dialogue boxes.
+
+![](/assets/images/blog/2025-12-30/big_dialogue.png)
+
+For smaller and unnamed NPCs that might have something to say, we would just display a small dialogue box above their heads.
+
+![](/assets/images/blog/2025-12-30/short_dialogue.png)
+
+For important cutscenes or in other special settings, we also have a bigger dialogue box again, but with another design.
+
+![](/assets/images/blog/2025-12-30/cinematic_dialogue.png)
+
+As for the speaking s
+
+<video controls playsinline muted loop preload="metadata" style="max-width:100%;height:auto;">
+<source src="{{ '/assets/videos/blog/2025-12-30/speak.mp4' | relative_url }}" type="video/mp4">
+</video>
