--- a/_posts/2025-12-30-003.md
+++ b/_posts/2025-12-30-003.md
@@ -45,8 +45,13 @@ For important cutscenes or in other special settings, we also have a bigger dial
 
 ![](/assets/images/blog/2025-12-30/cinematic_dialogue.png)
 
-As for the speaking s
+As for the speaking sound, I was not able to find anything online that I could use. I donwloaded ![Ardour](https://ardour.org/), a free and open-source DAW, and recorded myself making a very short 'huh' sound. This can be passed to the NPCs alongside a pitch value, which allows the NPCs to not all sound the same.
 
-<video controls playsinline muted loop preload="metadata" style="max-width:100%;height:auto;">
-<source src="{{ '/assets/videos/blog/2025-12-30/speak.mp4' | relative_url }}" type="video/mp4">
+<video controls playsinline preload="metadata" style="max-width:100%;height:auto;">
+  <source src="/assets/images/blog/2025-12-30/speak.mp4" type="video/mp4">
+  Sorry, your browser doesn’t support embedded video.
 </video>
+
+## Next up
+
+The next thing I will be working on is a scene manager that loads all necessary entities when setting up a map or entering a battle scene, and then the actual battle scene. I will also be implementing the scaling mechanism for the player character in this next phase. As for my colleague, he is currently working on an idea on his own, but will help me here and there with the workload. A belated happy holidays and a happy new year! :)
