--- a/_posts/2025-12-30-003.md
+++ b/_posts/2025-12-30-003.md
@@ -31,7 +31,7 @@ The only thing missing is a scaling system, for example when encountering ladder
 
 ## Dialogue System
 
-For the dialogue system, I decided to use ![Nathan Hoad's Dialogue Manager](https://dialogue.nathanhoad.net/), which already comes shipped with a great set of functionalities. For our game, I only needed to make some minor tweaks and add only little functionality, such as a 'speaking sound' whenever letters are being printed in the dialogue boxes.
+For the dialogue system, I decided to use [Nathan Hoad's Dialogue Manager](https://dialogue.nathanhoad.net/), which already comes shipped with a great set of functionalities. For our game, I only needed to make some minor tweaks and add only little functionality, such as a 'speaking sound' whenever letters are being printed in the dialogue boxes.
 
 Depending on the type of dialogue, I created three separate instances with which an NPC can display its text. Something that might be needed for small cutscenes are the default dialogue boxes.
 
@@ -45,7 +45,7 @@ For important cutscenes or in other special settings, we also have a bigger dial
 
 ![](/assets/images/blog/2025-12-30/cinematic_dialogue.png)
 
-As for the speaking sound, I was not able to find anything online that I could use. I donwloaded ![Ardour](https://ardour.org/), a free and open-source DAW, and recorded myself making a very short 'huh' sound. This can be passed to the NPCs alongside a pitch value, which allows the NPCs to not all sound the same.
+As for the speaking sound, I was not able to find anything online that I could use. I downloaded [Ardour](https://ardour.org/), a free and open-source DAW, and recorded myself making a very short 'huh' sound. This can be passed to the NPCs alongside a pitch value, which allows the NPCs to not all sound the same.
 
 <video controls playsinline preload="metadata" style="max-width:100%;height:auto;">
   <source src="/assets/images/blog/2025-12-30/speak.mp4" type="video/mp4">
